--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,12 @@ python-decouple==3.1
 python-http-client==3.1.0
 pytz==2018.9
 rave-python==1.0.1
+cloudinary==1.15.0
 redis==3.1.0
 requests==2.21.0
 sendgrid==3.6.5
 sendgrid-django==4.2.0
 six==1.12.0
-stripe==2.27.0
 twilio==6.24.0
 urllib3==1.24.1
 vine==1.2.0
