--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 Django==2.0
 django-cors-headers==2.2.0
 djangorestframework==3.9.1
+djangorestframework-simplejwt==4.4.0
 gunicorn==19.8.1
 idna==2.8
 kombu==4.3.0
